modified pages for padding and boldness

--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top col-xs-12">
         <div class="hidden-xs hidden-sm col-md-4">
             <a href="../website/website-list.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> Pages </p>
+            <p class="navbar-brand dk-no-side-padding dk-no-margin dk-no-side-padding"><b>Pages</b></p>
             <a href="page-new.html" class="navbar-brand bg-secondary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
@@ -25,7 +25,7 @@
             <a class="navbar-brand" href="page-list.html">
                 <span class="glyphicon glyphicon-remove bg-secondary"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> Edit Page </p>
+            <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b>Edit Page</b></p>
             <a class="navbar-brand pull-right" href="page-list.html">
                 <span class="glyphicon glyphicon-ok bg-secondary text-right"></span>
             </a>
@@ -90,10 +90,10 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary col-xs-12">
         <div class="container-fluid col-xs-1 col-xs-offset-11">
-            <a href="../user/profile.html">
-                <span class="navbar-brand pull-right bg-secondary glyphicon glyphicon-user"></span>
+            <a href="../user/profile.html" class="navbar-brand pull-right">
+                <span class="text-primary glyphicon glyphicon-user"></span>
             </a>
         </div>
     </nav>
