--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -15,7 +15,7 @@
         <a href="../website/website-list.html" class="navbar-brand">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <p class="dk-no-margin navbar-brand">Pages</p>
+        <p class="dk-no-margin dk-no-side-padding navbar-brand"><b>Pages</b></p>
         <a href="page-new.html" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-plus"></span>
         </a>
@@ -54,10 +54,12 @@
             </li>
         </ul>
     </div>
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-        <a href="../user/profile.html" class="navbar-brand pull-right">
-            <span class="glyphicon glyphicon-user text-primary"></span>
-        </a>
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary col-xs-12">
+        <div class="container-fluid col-xs-1 col-xs-offset-11">
+            <a href="../user/profile.html" class="navbar-brand pull-right">
+                <span class="text-primary glyphicon glyphicon-user"></span>
+            </a>
+        </div>
     </nav>
 </div>
 </body>
