--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top col-xs-12">
         <div class="hidden-xs hidden-sm col-md-4">
             <a href="../user/profile.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> Page </p>
+            <p class="navbar-brand text-center dk-no-margin"><b>Page</b></p>
             <a href="../user/profile.html" class="navbar-brand bg-secondary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
@@ -25,7 +25,7 @@
             <a class="navbar-brand" href="page-list.html">
                 <span class="glyphicon glyphicon-remove bg-secondary"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"> New Page </p>
+            <p class="navbar-brand text-center dk-no-margin"><b>New Page</b></p>
             <a class="navbar-brand pull-right" href="page-list.html">
                 <span class="glyphicon glyphicon-ok bg-secondary text-right"></span>
             </a>
@@ -88,10 +88,12 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom">
-        <a href="../user/profile.html" class="navbar-brand pull-right">
-            <span class="glyphicon glyphicon-user text-primary"></span>
-        </a>
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary col-xs-12">
+        <div class="container-fluid col-xs-1 col-xs-offset-11">
+            <a href="../user/profile.html" class="navbar-brand pull-right">
+                <span class="text-primary glyphicon glyphicon-user"></span>
+            </a>
+        </div>
     </nav>
 </div>
 </body>
