--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -12,12 +12,12 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
-        <a class="bg-primary navbar-brand" href="../user/profile.html">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+        <a href="../user/profile.html" class="navbar-brand">
+            <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
         </a>
         <p class="dk-no-margin dk-no-side-padding navbar-brand"><b>Website</b></p>
-        <a class="bg-primary pull-right navbar-brand" href="website-new.html">
-            <span class="glyphicon glyphicon-plus"></span>
+        <a href="website-new.html" class="pull-right navbar-brand">
+            <span class="glyphicon glyphicon-plus bg-primary"></span>
         </a>
     </nav>
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
