--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
-        <div class="container-fluid hidden-xs hidden-sm col-md-4">
+        <div class="hidden-xs hidden-sm col-md-4">
             <a href="../user/profile.html" class="navbar-brand bg-primary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
@@ -25,9 +25,9 @@
             <a class="navbar-brand" href="website-list.html">
                 <span class="glyphicon glyphicon-remove bg-primary"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"><b>New Website</b></p>
+            <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> New Website </b></p>
             <a class="navbar-brand pull-right" href="website-list.html">
-                <span class="glyphicon glyphicon-ok bg-primary text-right"></span>
+                <span class="glyphicon glyphicon-ok bg-primary"></span>
             </a>
         </div>
     </nav>
@@ -79,7 +79,7 @@
         </div>
     </div>
     <nav class="navbar navbar-fixed-bottom bg-primary">
-        <div class="container-fluid col-xs-1 col-xs-offset-11">
+        <div class="col-xs-12">
             <a href="../user/profile.html">
                 <span class="navbar-brand pull-right bg-primary glyphicon glyphicon-user"></span>
             </a>
