--- a/src/assets/views/widget/widget-choose.html
+++ b/src/assets/views/widget/widget-choose.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
     <meta charset="UTF-8">
     <title>Choose Widget</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -9,11 +12,11 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
-        <div class="container-fluid">
+        <div class="col-xs-12">
             <a class="bg-secondary navbar-brand" href="widget-list.html">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <b class="navbar-brand"> Choose Widget </b>
+            <b class="navbar-brand dk-no-side-padding dk-no-margin"> Choose Widget </b>
         </div>
     </nav>
     <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
@@ -51,9 +54,11 @@
         </ul>
     </div>
     <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-        <a href="../user/profile.html" class="navbar-brand pull-right">
-            <span class="glyphicon glyphicon-user"></span>
-        </a>
+        <div class="col-xs-12">
+            <a href="../user/profile.html" class="navbar-brand pull-right">
+                <span class="glyphicon glyphicon-user text-primary"></span>
+            </a>
+        </div>
     </nav>
 </div>
 </body>
