--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
     <meta charset="UTF-8">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../../css/style.css" rel="stylesheet"/>
     <title>Widgets</title>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
-    <div class="container-fluid">
+    <div class="col-xs-12">
         <a class="bg-secondary navbar-brand" href="../page/page-list.html">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <b class="navbar-brand"> Widgets </b>
+        <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Widgets </b></p>
         <a class="bg-secondary pull-right navbar-brand" href="widget-choose.html">
             <span class="glyphicon glyphicon-plus"></span>
         </a>
@@ -109,15 +113,17 @@
     </div>
 </div>
 <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-    <a href="#" class="navbar-brand">
-        <span class="glyphicon glyphicon-play"></span>
-    </a>
-    <a href="#" class="navbar-brand">
-        <span class="glyphicon glyphicon-eye-open"></span>
-    </a>
-    <a href="../user/profile.html" class="navbar-brand pull-right">
-        <span class="glyphicon glyphicon-user text-primary"></span>
-    </a>
+    <div class="col-xs-12">
+        <a href="#" class="navbar-brand">
+            <span class="glyphicon glyphicon-play"></span>
+        </a>
+        <a href="#" class="navbar-brand">
+            <span class="glyphicon glyphicon-eye-open"></span>
+        </a>
+        <a href="../user/profile.html" class="navbar-brand pull-right">
+            <span class="glyphicon glyphicon-user text-primary"></span>
+        </a>
+    </div>
 </nav>
 </body>
 </html>
