padding changes on headers

--- a/src/assets/views/page/page-edit.html
+++ b/src/assets/views/page/page-edit.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top col-xs-12">
-        <div class="hidden-xs hidden-sm col-md-4">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="hidden-xs hidden-sm col-md-4 row">
             <a href="../website/website-list.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
@@ -35,7 +35,7 @@
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <div class="col-md-4 hidden-xs hidden-sm">
             <ul class="list-group">
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Blog Posts </a>
                         <a href="page-edit.html">
@@ -43,7 +43,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Blog </a>
                         <a href="page-edit.html">
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Home </a>
                         <a href="page-edit.html">
@@ -59,7 +59,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> About </a>
                         <a href="page-edit.html">
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Contact Us </a>
                         <a href="page-edit.html">
@@ -90,12 +90,10 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary col-xs-12">
-        <div class="container-fluid col-xs-1 col-xs-offset-11">
-            <a href="../user/profile.html" class="navbar-brand pull-right">
-                <span class="text-primary glyphicon glyphicon-user"></span>
-            </a>
-        </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
+        <a href="../user/profile.html" class="navbar-brand pull-right">
+            <span class="text-primary glyphicon glyphicon-user"></span>
+        </a>
     </nav>
 </div>
 </body>
