--- a/src/assets/views/page/page-list.html
+++ b/src/assets/views/page/page-list.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top bg-secondary col-xs-12">
+    <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
         <a href="../website/website-list.html" class="navbar-brand">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
@@ -22,31 +22,31 @@
     </nav>
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <ul class="list-group">
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../widget/widget-list.html" class="col-xs-11"> Blog Posts </a>
-                    <a href="page-edit.html">
+                <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../widget/widget-list.html" class="col-xs-11"> Blog </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../widget/widget-list.html" class="col-xs-11"> Home </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../widget/widget-list.html" class="col-xs-11"> About </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../widget/widget-list.html" class="col-xs-11"> Contact Us </a>
                 <a href="page-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
@@ -54,12 +54,10 @@
             </li>
         </ul>
     </div>
-    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary col-xs-12">
-        <div class="container-fluid col-xs-1 col-xs-offset-11">
-            <a href="../user/profile.html" class="navbar-brand pull-right">
-                <span class="text-primary glyphicon glyphicon-user"></span>
-            </a>
-        </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
+        <a href="../user/profile.html" class="navbar-brand pull-right">
+            <span class="text-primary glyphicon glyphicon-user"></span>
+        </a>
     </nav>
 </div>
 </body>
