--- a/src/assets/views/page/page-new.html
+++ b/src/assets/views/page/page-new.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top col-xs-12">
-        <div class="hidden-xs hidden-sm col-md-4">
-            <a href="../user/profile.html" class="navbar-brand bg-secondary">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="hidden-xs hidden-sm col-md-4 row">
+            <a href="../website/website-list.html" class="navbar-brand bg-secondary">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"><b>Page</b></p>
-            <a href="../user/profile.html" class="navbar-brand bg-secondary pull-right">
+            <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b>Pages</b></p>
+            <a href="page-new.html" class="navbar-brand bg-secondary pull-right">
                 <span class="glyphicon glyphicon-plus"></span>
             </a>
         </div>
@@ -35,7 +35,7 @@
     <div class="dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
         <div class="col-md-4 hidden-xs hidden-sm">
             <ul class="list-group">
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Blog Posts </a>
                         <a href="page-edit.html">
@@ -43,7 +43,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Blog </a>
                         <a href="page-edit.html">
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Home </a>
                         <a href="page-edit.html">
@@ -59,7 +59,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> About </a>
                         <a href="page-edit.html">
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../widget/widget-list.html"> Contact Us </a>
                         <a href="page-edit.html">
