--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -11,8 +11,8 @@
     <link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
-<nav class="navbar navbar-fixed-top bg-primary row">
-    <div class="container-fluid">
+<nav class="navbar navbar-fixed-top bg-primary">
+    <div class="col-xs-12">
         <p class="dk-no-margin navbar-brand"><b>Profile</b></p>
         <a class="navbar-brand pull-right" href="profile.html">
             <span class="glyphicon glyphicon-ok bg-primary"></span>
