--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -12,6 +12,7 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
+        <div class=" row">
         <a href="../user/profile.html" class="navbar-brand">
             <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
         </a>
@@ -19,28 +20,29 @@
         <a href="website-new.html" class="pull-right navbar-brand">
             <span class="glyphicon glyphicon-plus bg-primary"></span>
         </a>
+        </div>
     </nav>
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <ul class="list-group">
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../page/page-list.html" class="col-xs-11"> Address Book App </a>
                 <a href="website-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../page/page-list.html" class="col-xs-11"> Blogger </a>
                 <a href="website-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../page/page-list.html" class="col-xs-11"> Blogging App </a>
                 <a href="website-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
                 </a>
             </li>
-            <li class="list-group-item text-primary dk-borderless row dk-li-right-margin">
+            <li class="list-group-item text-primary dk-borderless row">
                 <a href="../page/page-list.html" class="col-xs-11"> Script Testing App </a>
                 <a href="website-edit.html">
                     <span class="pull-right glyphicon glyphicon-cog"></span>
@@ -49,11 +51,9 @@
         </ul>
     </div>
     <nav class="navbar navbar-fixed-bottom square bg-primary">
-        <div class="container-fluid">
             <a href="../user/profile.html">
                 <span class="navbar-brand glyphicon glyphicon-user pull-right bg-primary"></span>
             </a>
-        </div>
     </nav>
 </div>
 </body>
