--- a/src/assets/views/website/website-new.html
+++ b/src/assets/views/website/website-new.html
@@ -11,14 +11,14 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
-        <div class="hidden-xs hidden-sm col-md-4">
-            <a href="../user/profile.html" class="navbar-brand bg-primary">
-                <span class="glyphicon glyphicon-chevron-left"></span>
+    <nav class="navbar navbar-fixed-top bg-primary">
+        <div class="hidden-xs hidden-sm col-md-4 row">
+            <a href="../user/profile.html" class="navbar-brand">
+                <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
             </a>
-            <p class="navbar-brand text-center dk-no-margin"><b>Website</b></p>
-            <a href="../user/profile.html" class="navbar-brand bg-primary pull-right">
-                <span class="glyphicon glyphicon-plus"></span>
+            <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Website </b></p>
+            <a href="website-new.html" class="navbar-brand pull-right">
+                <span class="glyphicon glyphicon-plus bg-primary"></span>
             </a>
         </div>
         <div>
@@ -34,7 +34,7 @@
     <div class="dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
         <div class="col-md-4 hidden-xs hidden-sm">
             <ul class="list-group">
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Address Book App </a>
                         <a href="website-edit.html">
@@ -42,7 +42,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Blogger </a>
                         <a href="website-edit.html">
@@ -50,7 +50,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Blogging App </a>
                         <a href="website-edit.html">
@@ -58,7 +58,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Script Testing App </a>
                         <a href="website-edit.html">
@@ -79,11 +79,9 @@
         </div>
     </div>
     <nav class="navbar navbar-fixed-bottom bg-primary">
-        <div class="col-xs-12">
             <a href="../user/profile.html">
                 <span class="navbar-brand pull-right bg-primary glyphicon glyphicon-user"></span>
             </a>
-        </div>
     </nav>
 </div>
 </body>
