--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -12,13 +12,13 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-fixed-top bg-primary">
-        <div class="hidden-xs hidden-sm col-md-4">
-            <a href="../user/profile.html" class="navbar-brand bg-primary">
-                <span class="glyphicon glyphicon-chevron-left"></span>
+        <div class="hidden-xs hidden-sm col-md-4 row">
+            <a href="../user/profile.html" class="navbar-brand">
+                <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
             </a>
             <p class="navbar-brand text-center dk-no-margin dk-no-side-padding"><b> Website </b></p>
-            <a href="website-new.html" class="navbar-brand bg-primary pull-right">
-                <span class="glyphicon glyphicon-plus"></span>
+            <a href="website-new.html" class="navbar-brand pull-right">
+                <span class="glyphicon glyphicon-plus bg-primary"></span>
             </a>
         </div>
         <div>
@@ -35,7 +35,7 @@
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
         <div class="col-md-4 hidden-xs hidden-sm">
             <ul class="list-group">
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Address Book App </a>
                         <a href="website-edit.html">
@@ -43,7 +43,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Blogger </a>
                         <a href="website-edit.html">
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Blogging App </a>
                         <a href="website-edit.html">
@@ -59,7 +59,7 @@
                         </a>
                     </div>
                 </li>
-                <li class="list-group-item text-primary dk-borderless">
+                <li class="list-group-item text-primary dk-borderless dk-li-right-margin">
                     <div class="row dk-li-right-margin">
                         <a href="../page/page-list.html"> Script Testing App </a>
                         <a href="website-edit.html">
@@ -83,11 +83,9 @@ Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempor in
     </div>
 
     <nav class="navbar navbar-fixed-bottom bg-primary">
-        <div class="container-fluid col-xs-1 col-xs-offset-11">
             <a href="../user/profile.html">
                 <span class="navbar-brand pull-right bg-primary glyphicon glyphicon-user"></span>
             </a>
-        </div>
     </nav>
 </div>
 </body>
